# waste_classification

./: Dockerfile  Makefile  NOTES.md  README.md  cifar_classifier.py  docker-compose.yml  pyproject.toml
models/: 20231128-20:53:35_bag_knn.joblib  20231128-20:57:32_bag_knn.joblib
models/20231129-10:08:38/: final_bag_net.pth
notebooks/: bin_bag_challenge.ipynb  waste_classification.ipynb
recycle_eye/: dataloader.py
recycle_eye/classifier/: basic_network.py  dataloader.py  experiment_params.py  experiment_recorder.py  stats.py  train.py
recycle_eye/clustering/: features.py
recycle_eye/features/: features.py
recycle_eye/nn/: infer.py  train.py
recycle_eye/notebook/: utils.py
tests/: test_dataloader.py  test_feature.py
training_stats/: 20231128-20:53:35.json  20231128-20:57:32.json  20231129-10:08:38.csv  20231129-10:08:38_stats.json
waste_classification/: dataloader.py  experiment_params.py  paths.py
waste_classification/features/: features.py
waste_classification/nn/: experiment_recorder.py  infer.py  train.py
waste_classification/notebook/: utils.py
