[tool.poetry]
name = "recycle-eye"
version = "0.1.0"
description = ""
authors = ["Rees Davison <rees@hazy.com>"]
readme = "README.md"
packages = [{include = "recycle_eye"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.1.1"
torchvision = "0.16.1"
notebook = "^7.0.6"
scikit-image = "^0.22.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
