[tool.poetry]
name = "recycle-eye"
version = "0.1.0"
description = ""
authors = ["Rees Davison <rees@hazy.com>"]
readme = "README.md"
packages = [{include = "recycle_eye"}]


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.dependencies]
python = "^3.11"
torch = [
    { markers = "sys_platform == 'darwin'", version = "2.1.1" },
    { markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", version = "2.1.0", source = "torch_cpu" },
]
torchvision = [
    { markers = "sys_platform == 'darwin'", version = "0.16.1" },
    { markers = "sys_platform == 'linux' and platform_machine == 'x86_64'", version = "0.16.0" },
]
scikit-image = "^0.22.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
pydantic = "^2.5.2"
devtools = "^0.12.2"
scikit-learn = "^1.3.2"
joblib = "^1.3.2"
jupyterlab = "^4.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
